package behavioral.state.maytinh;

public interface CalculatorState {
  public boolean operateHandle(Calculator calculator);
}
