@startuml
'https://plantuml.com/class-diagram

class Calculator{
 int input1, input2;
+ setState(CalculatorState state)
+ boolean operate()
}
class InputState1
class InputState2
class InputOperationState
class OperateState
interface CalculatorState{
+ void operateHandle(CalculatorState calculator)
}
InputState1 ..|> CalculatorState
InputState2 ..|> CalculatorState
Calculator --> CalculatorState: state
OperateState --|> CalculatorState
InputOperationState --|> CalculatorState

@enduml